Fixed search bar overflow issue when logged in at medium resolution

--- a/client/stylesheets/app.less
+++ b/client/stylesheets/app.less
@@ -46,7 +46,7 @@ a:hover { text-decoration: none; }
   .search-group {
     input {
       margin: 4px 40px;
-      width: 400px;
+      width: 550px;
     }
     .dropdown-menu {
       margin: 10px 40px;
